<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name_edittext"
        android:padding="8dp"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/surnameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_surname_edittext"
        android:padding="8dp"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/adressET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_adress_edittext"
        android:padding="8dp"
        android:textSize="18dp" />


    <EditText
        android:id="@+id/phoneNumberET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phoneNumber_edittext"
        android:padding="8dp"
        android:textSize="18dp" />

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"/>

    <ListView
        android:id="@+id/personsLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>